; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spiffs/extr_spiffs_api.c_spiffs_api_read.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spiffs/extr_spiffs_api.c_spiffs_api_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.TYPE_5__ = type { i32 }

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"failed to read addr %08x, size %08x, err %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spiffs_api_read(%struct.TYPE_4__* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to %struct.TYPE_5__*
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32*, i32** %9, align 8
  %19 = load i32, i32* %8, align 4
  %20 = call i64 @esp_partition_read(i32 %16, i32 %17, i32* %18, i32 %19)
  store i64 %20, i64* %10, align 8
  %21 = load i64, i64* %10, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %4
  %24 = load i32, i32* @TAG, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i64, i64* %10, align 8
  %28 = call i32 @ESP_LOGE(i32 %24, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %25, i32 %26, i64 %27)
  store i32 -1, i32* %5, align 4
  br label %30

29:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %30

30:                                               ; preds = %29, %23
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i64 @esp_partition_read(i32, i32, i32*, i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
